# venture-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: CNAME  README.md  _config.yml  acknowledgements.md  ai-provider-setup.md  app.js  cost-management.md  development-plan.md  documentation.html  faq.md  ideas.md  index.html  prompt-engineering.md  provider-comparison.md  quick-start.md  security-best-practices.md  styles.css  troubleshooting.md
docs/artifacts/: entrepreneurship_app_hub.html  global_compass_app.html  idea_forge_app.html  pitch_perfect_app.html  prd_generator_app.html
docs/screenshots/: README.md
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_providers.rs  error_handling.rs  key_validation.rs  main.rs  prompts.rs  secure_storage.rs  settings.rs  usage_tracking.rs
src/compoments/: tauri_settings_page.jsx
src/components/: AIProvidersPage.jsx  DocumentationPage.jsx  EnhancedSettingsPage.jsx  GlobalCompass.jsx  IdeaForge.jsx  PRDGenerator.jsx  PitchPerfect.jsx  PromptManager.jsx  SettingsPage.jsx  UsageStatsPage.jsx
src/lib/: key_validation_api.js  tauri_frontend_api.js
tasks/: tasks-entrepreneurship-ai-tools.md
