[package]
name = "entrepreneurship-ai-tools"
version = "0.1.0"
description = "AI-Powered Entrepreneurship Tools for Business Education"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/entrepreneurship-ai-tools"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
keyring = "2.3"
uuid = { version = "1.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
